tests/invalid/runtime/manual_ex063.pts
function main() : void {
    map<string, int> m = {};

    map<string, int> m = {};
    int x = m["absent"]; // runtime missing key
}
